# sumtube

./: .gitignore  README.md  deploy.sh  medium.md  pyproject.toml  test.py
sumtube/: __main__.py  cli.py  prompts.py  youtube_client.py  youtube_transcribe.py
sumtube/utils/: config_util.py
